fix z-index issue with crafting and martial arts

--- a/Exalted 3/Ex3-Sheet.css
+++ b/Exalted 3/Ex3-Sheet.css
@@ -490,8 +490,9 @@ input[class^=sheet-dots] {
     z-index: 1;
 }
 
-input.sheet-dots0,
-input.sheet-damage0 { z-index: 2; }
+input.sheet-dots0 { z-index: 2; }
+.sheet-layer3 input.sheet-dots0 { z-index: 5; }
+.sheet-layer5 input.sheet-dots0 { z-index: 7; }
 
 input.sheet-dots0:checked ~ input.sheet-dots1,
 input.sheet-dots1:checked ~ input.sheet-dots2,
@@ -503,6 +504,26 @@ input.sheet-dots6:checked ~ input.sheet-dots7,
 input.sheet-dots7:checked ~ input.sheet-dots8,
 input.sheet-dots8:checked ~ input.sheet-dots9,
 input.sheet-dots9:checked ~ input.sheet-dots10 { z-index: 3; }
+.sheet-layer4 input.sheet-dots0:checked ~ input.sheet-dots1,
+.sheet-layer4 input.sheet-dots1:checked ~ input.sheet-dots2,
+.sheet-layer4 input.sheet-dots2:checked ~ input.sheet-dots3,
+.sheet-layer4 input.sheet-dots3:checked ~ input.sheet-dots4,
+.sheet-layer4 input.sheet-dots4:checked ~ input.sheet-dots5,
+.sheet-layer4 input.sheet-dots5:checked ~ input.sheet-dots6,
+.sheet-layer4 input.sheet-dots6:checked ~ input.sheet-dots7,
+.sheet-layer4 input.sheet-dots7:checked ~ input.sheet-dots8,
+.sheet-layer4 input.sheet-dots8:checked ~ input.sheet-dots9,
+.sheet-layer4 input.sheet-dots9:checked ~ input.sheet-dots10 { z-index: 6; }
+.sheet-layer6 input.sheet-dots0:checked ~ input.sheet-dots1,
+.sheet-layer6 input.sheet-dots1:checked ~ input.sheet-dots2,
+.sheet-layer6 input.sheet-dots2:checked ~ input.sheet-dots3,
+.sheet-layer6 input.sheet-dots3:checked ~ input.sheet-dots4,
+.sheet-layer6 input.sheet-dots4:checked ~ input.sheet-dots5,
+.sheet-layer6 input.sheet-dots5:checked ~ input.sheet-dots6,
+.sheet-layer6 input.sheet-dots6:checked ~ input.sheet-dots7,
+.sheet-layer6 input.sheet-dots7:checked ~ input.sheet-dots8,
+.sheet-layer6 input.sheet-dots8:checked ~ input.sheet-dots9,
+.sheet-layer6 input.sheet-dots9:checked ~ input.sheet-dots10 { z-index: 8; }
 
 div.sheet-dots input.sheet-dots0:checked + span::before { content: url(http://i.imgur.com/brHawNF.png); }
 div.sheet-dots input.sheet-dots1:checked + span::before { content: url(http://i.imgur.com/FxaE1ej.png); }
